// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image works when loading === "eager" 1`] = `
<img
  alt="Some fake alt text"
  className="frontity-lazy-image fake-class-name"
  loading="eager"
  src="https://fake-src.com/fake-image.jpg"
  srcSet="https://fake-src.com/fake-image.jpg?w=300 300w, https://fake-src.com/fake-image.jpg?w=150 150w"
/>
`;

exports[`Image works with \`IntersectionObserver if \`height\` prop is not specified 1`] = `
Array [
  <noscript>
    <img
      alt="Some fake alt text"
      className="frontity-lazy-image fake-class-name"
      src="https://fake-src.com/fake-image.jpg"
      srcSet="https://fake-src.com/fake-image.jpg?w=300 300w, https://fake-src.com/fake-image.jpg?w=150 150w"
    />
  </noscript>,
  <img
    alt="Some fake alt text"
    className="frontity-lazy-image fake-class-name"
    data-src="https://fake-src.com/fake-image.jpg"
    data-srcset="https://fake-src.com/fake-image.jpg?w=300 300w, https://fake-src.com/fake-image.jpg?w=150 150w"
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />,
]
`;

exports[`Image works with \`IntersectionObserver\` and is in view 1`] = `
Array [
  <noscript>
    <img
      alt="Some fake alt text"
      className="frontity-lazy-image fake-class-name"
      src="https://fake-src.com/fake-image.jpg"
      srcSet="https://fake-src.com/fake-image.jpg?w=300 300w, https://fake-src.com/fake-image.jpg?w=150 150w"
    />
  </noscript>,
  <img
    alt="Some fake alt text"
    className="frontity-lazy-image fake-class-name"
    src="https://fake-src.com/fake-image.jpg"
    srcSet="https://fake-src.com/fake-image.jpg?w=300 300w, https://fake-src.com/fake-image.jpg?w=150 150w"
  />,
]
`;

exports[`Image works with \`IntersectionObserver\` and is out of view 1`] = `
Array [
  <noscript>
    <img
      alt="Some fake alt text"
      className="frontity-lazy-image fake-class-name"
      src="https://fake-src.com/fake-image.jpg"
      srcSet="https://fake-src.com/fake-image.jpg?w=300 300w, https://fake-src.com/fake-image.jpg?w=150 150w"
    />
  </noscript>,
  <img
    alt="Some fake alt text"
    className="frontity-lazy-image fake-class-name"
    data-src="https://fake-src.com/fake-image.jpg"
    data-srcset="https://fake-src.com/fake-image.jpg?w=300 300w, https://fake-src.com/fake-image.jpg?w=150 150w"
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />,
]
`;

exports[`Image works with native lazy load and component did mount 1`] = `
Array [
  <noscript>
    <img
      alt="Some fake alt text"
      className="frontity-lazy-image fake-class-name"
      height={300}
      loading="lazy"
      src="https://fake-src.com/fake-image.jpg"
      srcSet="https://fake-src.com/fake-image.jpg?w=300 300w, https://fake-src.com/fake-image.jpg?w=150 150w"
    />
  </noscript>,
  <img
    alt="Some fake alt text"
    className="frontity-lazy-image fake-class-name"
    height={300}
    loading="lazy"
    src="https://fake-src.com/fake-image.jpg"
    srcSet="https://fake-src.com/fake-image.jpg?w=300 300w, https://fake-src.com/fake-image.jpg?w=150 150w"
  />,
]
`;

exports[`Image works with native lazy load and component did not mount 1`] = `
Array [
  <noscript>
    <img
      alt="Some fake alt text"
      className="frontity-lazy-image fake-class-name"
      height={300}
      loading="lazy"
      src="https://fake-src.com/fake-image.jpg"
      srcSet="https://fake-src.com/fake-image.jpg?w=300 300w, https://fake-src.com/fake-image.jpg?w=150 150w"
    />
  </noscript>,
  <img
    alt="Some fake alt text"
    className="frontity-lazy-image fake-class-name"
    data-src="https://fake-src.com/fake-image.jpg"
    data-srcset="https://fake-src.com/fake-image.jpg?w=300 300w, https://fake-src.com/fake-image.jpg?w=150 150w"
    height={300}
    loading="lazy"
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />,
]
`;

exports[`Image works without \`IntersectionObserver\` and component did mount 1`] = `
Array [
  <noscript>
    <img
      alt="Some fake alt text"
      className="frontity-lazy-image fake-class-name"
      src="https://fake-src.com/fake-image.jpg"
      srcSet="https://fake-src.com/fake-image.jpg?w=300 300w, https://fake-src.com/fake-image.jpg?w=150 150w"
    />
  </noscript>,
  <img
    alt="Some fake alt text"
    className="frontity-lazy-image fake-class-name"
    src="https://fake-src.com/fake-image.jpg"
    srcSet="https://fake-src.com/fake-image.jpg?w=300 300w, https://fake-src.com/fake-image.jpg?w=150 150w"
  />,
]
`;

exports[`Image works without \`IntersectionObserver\` and component did not mount 1`] = `
Array [
  <noscript>
    <img
      alt="Some fake alt text"
      className="frontity-lazy-image fake-class-name"
      src="https://fake-src.com/fake-image.jpg"
      srcSet="https://fake-src.com/fake-image.jpg?w=300 300w, https://fake-src.com/fake-image.jpg?w=150 150w"
    />
  </noscript>,
  <img
    alt="Some fake alt text"
    className="frontity-lazy-image fake-class-name"
    data-src="https://fake-src.com/fake-image.jpg"
    data-srcset="https://fake-src.com/fake-image.jpg?w=300 300w, https://fake-src.com/fake-image.jpg?w=150 150w"
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />,
]
`;
